--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -57,6 +57,7 @@
     .skills__container{
         grid-template-columns: max-content;
         row-gap: 2rem;
+        padding: 6%;
     }
   }
   
