--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -51,7 +51,7 @@
 
 
 .home__img{
-    background: url(../../assets//hype1.jpg);
+    background: url(../../assets/trend.gif);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
