--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -51,7 +51,7 @@
 
 
 .home__img{
-    background: url(../../assets/trend.gif);
+    background: url(../../assets/cool.gif);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -142,7 +142,8 @@
 
     }
     .home__img{
-    
+        justify-items: initial;
+        justify-content: initial;
         justify-self: initial;
         order: initial;
     }
@@ -151,8 +152,8 @@
     }
     .home__img{
         box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%);
-        width: 200px;
-        height: 200px;
+        width: 240px;
+        height: 240px;
     }
     .home__scroll{
         display: none;
