--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -24,7 +24,7 @@
 }
 
 .home__title{
-    font-size: var(--big-font-size);
+    font-size: 30px;
     margin-bottom: var(--mb-0-25);
 }
 
@@ -138,7 +138,7 @@
   @media screen and (max-width: 768px) {
     .home__content{
         grid-template-columns: 0.5fr 4fr;
-        padding-top: 3.5rem;
+        padding-top: 1rem;
 
     }
     .home__img{
@@ -152,8 +152,8 @@
     }
     .home__img{
         box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%);
-        width: 240px;
-        height: 240px;
+        width: 200px;
+        height: 200px;
     }
     .home__scroll{
         display: none;
