--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -43,6 +43,17 @@
     text-align: center;
 }
 
+.nav__smalllogo{
+    padding-left: 10px;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 15px;
+}
+
+.nav__logo{
+    padding-left: 0;
+    font-family: 'Bungee', cursive;
+    font-size: 35px;
+}
 
 .home__description{
     max-width: 400px;
@@ -51,15 +62,15 @@
 
 
 .home__img{
-    background: url(../../assets/cool.gif);
+    background: url(../../assets/74t9z4.gif);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     box-shadow: inset 0 0 0 9px rgb(255 255 255 / 30%);
     order: 1;
     justify-self: center;
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     animation: profile__animate 8s ease-in-out infinite 1s;
 }
 
