--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -22,8 +22,11 @@
     background-color: var(--container-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 1rem;
+    width: 80%;
+    margin-right: 30px;
     border-radius: 0.75rem;
     text-align: center;
+    margin-left: 40px;
 }
 
 
