--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -62,7 +62,7 @@
 
 
 .home__img{
-    background: url(../../assets/74t9z4.gif);
+    background: url(../../assets/evolve.gif);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
