--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -158,13 +158,17 @@
         justify-self: initial;
         order: initial;
     }
+    .home__description{
+        font-size: 12px;
+        margin-bottom: 20px;
+    }
     .home__data{
         grid-column: 1/3;
     }
     .home__img{
         box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%);
-        width: 200px;
-        height: 200px;
+        width: 250px;
+        height: 250px;
     }
     .home__scroll{
         display: none;
