--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -19,10 +19,15 @@ column-gap: 4rem;
     gap: 0.5rem;
     margin-bottom: var(--mb-2);
 }
-
+.typo{
+    font-size: 30px;
+    font-weight: bold;
+    color: orangered;
+}
 .about__box{
     background-color: var(--container-color);
-    border: 1px solid rgba(0,0,0,0.1);
+    border: 2px solid black;
+    
     border-radius: 1rem;
     text-align: center;
     padding: 1rem 1.25rem;
