--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -19,7 +19,7 @@ column-gap: 4rem;
     gap: 0.5rem;
     margin-bottom: var(--mb-2);
 }
-.typo{
+.typu{
     font-size: 30px;
     font-weight: bold;
     color: orangered;
