--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -7,6 +7,14 @@
     background-color: var(--body-color);
 
 }
+.logo {
+    display: inline-block;
+    margin: 15px; /* margin: 20px was off */
+    float: left;
+    height: 60px;
+    width: auto; /* correct proportions to specified height */
+    border-radius: 50%; /* makes it a circle */
+  }
 .nav{
     height: calc(var(--header-height) + 1.5rem);
     display: flex;
