--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -9,11 +9,8 @@
 }
 .logo {
     display: inline-block;
-    margin: 15px; /* margin: 20px was off */
-    float: left;
-    height: 60px;
-    width: auto; /* correct proportions to specified height */
-    border-radius: 50%; /* makes it a circle */
+    width: 80px;
+    height: 80px;
   }
 .nav{
     height: calc(var(--header-height) + 1.5rem);
