--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -11,6 +11,8 @@
 .footer__link{
     color: var(--title-color);
 }
+.logos{
+}
 .footer__tiitle{
     text-align: center;
     justify-content: center;
